--- a/ouster-ros/package.xml
+++ b/ouster-ros/package.xml
@@ -5,7 +5,7 @@
   <version>0.13.4</version>
   <description>Ouster ROS2 driver</description>
   <maintainer email="oss@ouster.io">ouster developers</maintainer>
-  <license file="LICENSE">BSD</license>
+  <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
