--- a/ouster-ros/package.xml
+++ b/ouster-ros/package.xml
@@ -13,6 +13,9 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>rclcpp_lifecycle</depend>
+  <depend>rosbag2_cpp</depend>
+  <depend>rosbag2_storage</depend>
+  <depend>rosbag2_transport</depend>
   <depend>std_msgs</depend>
   <depend>ouster_sensor_msgs</depend>
   <depend>sensor_msgs</depend>
